rename title attribute

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>generated grid</title>
+	<title>simple calculator</title>
 	<link rel='stylesheet' type='text/css' href="simpler.css" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="script.js"></script>
