--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<title>simple calculator</title>
-	<link rel='stylesheet' type='text/css' href="styles/simpler.css" />
+	<link rel='stylesheet' type='text/css' href="styles/style.css" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="script.js"></script>
 </head>
