mouse click events implemented, move javascript into src folder, fix references to scripts

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 	<title>simple calculator</title>
 	<link rel='stylesheet' type='text/css' href="styles/style.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-	<script src="script.js"></script>
+	<script src="src/jquery-1.11.1.min.js"></script>
+	<script src="src/script.js"></script>
 </head>
 <body>
   <script type="text/javascript">
 		drawCalculator()
   </script> 
 </body>
-</html>
+</html> 
