add some animations for mouse events, update styles accordingly

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>simple calculator</title>
 	<link rel='stylesheet' type='text/css' href="styles/style.css" />
 	<script src="src/jquery-1.11.1.min.js"></script>
+	<script src="src/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="src/script.js"></script>
 </head>
 <body>
