--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
 	<title>simple calculator</title>
+  <meta charset='utf-8'>
+  <meta name='description' content=''>
+  <meta name='keywords' content=''>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel='stylesheet' type='text/css' href="styles/style.css" />
 	<script src="src/jquery-1.11.1.min.js"></script>
 	<script src="src/jquery-ui-1.10.4.custom.min.js"></script>
