add responsive rules, differing base-font-sizes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name='keywords' content=''>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel='stylesheet' type='text/css' href="styles/style.css" />
+	<link rel='stylesheet' type='text/css' href="styles/responsive.css" />
 	<script src="src/jquery-1.11.1.min.js"></script>
 	<script src="src/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="src/script.js"></script>
