--- a/pub/index.html
+++ b/pub/index.html
@@ -6,10 +6,10 @@
   <meta name='description' content=''>
   <meta name='keywords' content=''>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel='stylesheet' type='text/css' href="styles/style.css" />
-	<script src="src/jquery-1.11.1.min.js"></script>
-	<script src="src/jquery-ui-1.10.4.custom.min.js"></script>
-	<script src="src/script.js"></script>
+	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
+	<script src="js/jquery-1.11.1.min.js"></script>
+	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+	<script src="js/script.js"></script>
 </head>
 <body>
   <script type="text/javascript">
