configure tasks. font-family template. consolidate dev/ folder

--- a/pub/index.html
+++ b/pub/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
   <script type="text/javascript">
-		drawCalculator()
+		//drawCalculator()
   </script> 
+<div id="container"><div id="calculator"><div id="display"></div><div id="row1"><div class="button operation" id="1"><span>(</span></div><div class="button operation" id="2"><span>)</span></div><div class="button operation" id="3"><span>%</span></div><div class="button util" id="4"><span>clr</span></div></div><div id="row2"><div class="button nums" id="5"><span>7</span></div><div class="button nums" id="6"><span>8</span></div><div class="button nums" id="7"><span>9</span></div><div class="button operation" id="8"><span>/</span></div></div><div id="row3"><div class="button nums" id="9"><span>4</span></div><div class="button nums" id="10"><span>5</span></div><div class="button nums" id="11"><span>6</span></div><div class="button operation" id="12"><span>*</span></div></div><div id="row4"><div class="button nums" id="13"><span>1</span></div><div class="button nums" id="14"><span>2</span></div><div class="button nums" id="15"><span>3</span></div><div class="button operation" id="16"><span>-</span></div></div><div id="row5"><div class="button nums" id="17"><span>0</span></div><div class="button operation" id="18"><span>.</span></div><div class="button util" id="19"><span>=</span></div><div class="button operation" id="20"><span>+</span></div></div><h4>Very simple calculator by Rafael Espinoza</h4><p>Use your keyboard or mouse to write an expression.<br>Press the 'delete' key to clear the display. <br>Press the 'enter' key to evaluate your expression.</p></div></div>
 </body>
 </html> 
