tweak font sizes for mobile portrait

--- a/pub/index.html
+++ b/pub/index.html
@@ -16,7 +16,7 @@
         <div class="button operation" id="1"><span>(</span></div>
         <div class="button operation" id="2"><span>)</span></div>
         <div class="button operation" id="3"><span>%</span></div>
-        <div class="button util" id="4"><span>clr</span></div>
+        <div class="button util" id="4"><span>c</span></div>
       </div>
       <div id="row2">
         <div class="button nums" id="5"><span>7</span></div>
@@ -40,7 +40,9 @@
         <div class="button util" id="19"><span>=</span></div>
         <div class="button operation" id="20"><span>+</span></div>
       </div>
-      <h4>Very simple calculator by Rafael Espinoza</h4>
+    </div>
+    <div class='info'>
+      <h4>Very simple calculator by <a href='http://www.rafaelespinoza.com' target='_blank'>Rafael Espinoza</a></h4>
       <p>
         Use your keyboard or mouse to write an expression.<br>
         Press the 'delete' key to clear the display.<br>
