convert all document write to jQuery appends, separate index file for testing, adjust tasks

--- a/pub/gen-index.html
+++ b/pub/gen-index.html
@@ -6,15 +6,17 @@
   <meta name='description' content=''>
   <meta name='keywords' content=''>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
 	<script src="js/jquery-ui-1.10.4.custom.min.js"></script>
 	<script src="js/script.js"></script>
-	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
 </head>
 <body>
+  <div id="container"></div>
   <script type="text/javascript">
     $(document).ready(function() {
-      draw();
+      draw('portrait');
+      //draw('landscape');
     });
   </script> 
 </body>
