separate loop for portrait & landscape html generation

--- a/pub/gen-index.html
+++ b/pub/gen-index.html
@@ -15,7 +15,8 @@
   <div id="container"></div>
   <script type="text/javascript">
     $(document).ready(function() {
-      draw('portrait');
+      draw();
+      //draw('portrait');
       //draw('landscape');
     });
   </script> 
