refine & refactor landscape draw

--- a/pub/gen-index.html
+++ b/pub/gen-index.html
@@ -15,7 +15,8 @@
   <div id="container"></div>
   <script type="text/javascript">
     $(document).ready(function() {
-      draw();
+      var isLandscape = 1;
+      draw(isLandscape);
       //draw('portrait');
       //draw('landscape');
     });
