implement table generating script

--- a/pub/gen-index.html
+++ b/pub/gen-index.html
@@ -16,7 +16,8 @@
   <script type="text/javascript">
     $(document).ready(function() {
       var isLandscape = 1;
-      draw(isLandscape);
+      genTable(isLandscape);
+      //draw(isLandscape);
       //draw('portrait');
       //draw('landscape');
     });
