Squashed commit of the following:
commit 871310e9485e8d57eb8e9780015b92ef685e4420
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Sep 6 17:39:03 2014 -0700

    fix display's line height for mobile. disable zoom

commit 2b735591e6d5139a8c498fcb3421552209cf3c2f
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Sep 6 17:30:54 2014 -0700

    move addClass removeClass clickActive away

commit 9d01599b3db3b2bad3989eef64fb6ddf3d4d4d01
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Sat Sep 6 17:22:57 2014 -0700

    delegate mouse click events to #container

commit 874f7ea7c066e7b32cf1ccf11868c51d13bf2f52
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Thu Sep 4 16:52:37 2014 -0700

    squashed: restore-mouse-events

commit e129c827a8b5e9ec29cec332a4807c1c3db04bcc
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Tue Sep 2 16:18:51 2014 -0700

    replace older & bloated jq-ui file with newer smaller one

commit aa116678f1307dd6a84d774698e5c8cbaf14e73a
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Tue Sep 2 15:42:39 2014 -0700

    add in 2 smaller jquery-ui files for testing

commit 632009c8cc315dbbdb3b6342ee04b741512a5e2d
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Tue Sep 2 15:22:34 2014 -0700

    some small changes

commit 7700361e37be6e4802093f069f5a9a24f3eb6f0a
Merge: 4e666de 620de37
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Tue Sep 2 13:16:59 2014 -0700

    Merge branch 'touch' into no-jq-ui

commit 620de37f91cac193fb90ec99ba8471c360c68ec4
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Mon Sep 1 18:34:16 2014 -0700

    update the try it out link in README

commit 9b923f327472a0f331bca4a8e20e9f42e0d00ac0
Author: Rafael Espinoza <rafael@rafaelespinoza.com>
Date:   Mon Sep 1 18:13:31 2014 -0700

    fix media queries interfering with desktop views. store media query px values in variables

commit 3e417ac02e9ed40571489d01cdb4bfc7875a9ad4
Aut

--- a/pub/div-gen.html
+++ b/pub/div-gen.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>table-generated file</title>
+	<title>div-generated file</title>
   <meta charset='utf-8'>
   <meta name='description' content=''>
   <meta name='keywords' content=''>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
@@ -15,11 +15,7 @@
   <div id="container"></div>
   <script type="text/javascript">
     $(document).ready(function() {
-      var initIsLandscape = isLandscape() || 0;
-      genTable(initIsLandscape);
-      $(window).bind('orientationchange', function() {
-        redraw();
-      });
+      genDiv();
     });
   </script> 
 	<script src="js/inputUtil.js"></script>
