--- a/pub/tbl-gen.html
+++ b/pub/tbl-gen.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <meta name='description' content=''>
   <meta name='keywords' content=''>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
 	<script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
