--- a/pub/index.html
+++ b/pub/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>simple calculator</title>
+  <title>simple calculator</title>
   <meta charset='utf-8'>
   <meta name='description' content=''>
   <meta name='keywords' content=''>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<link rel='stylesheet' type='text/css' href="styles/styles.css" />
-	<script src="js/jquery-1.11.1.min.js"></script>
+  <link rel='stylesheet' type='text/css' href="styles/styles.css" />
+  <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/jquery-ui.min.js"></script>
-	<script src="js/generate.js"></script>
+  <script src="js/generate.js"></script>
 </head>
 <body>
-  <div id="container"></div>
+  <div class="container"></div>
   <script type="text/javascript">
     $(document).ready(function() {
       var initIsLandscape = isLandscape() || 0;
@@ -22,6 +22,6 @@
       });
     });
   </script>
-	<script src="js/inputUtil.js"></script>
+  <script src="js/inputUtil.js"></script>
 </body>
 </html>
