--- a/pub/index.html
+++ b/pub/index.html
@@ -7,8 +7,8 @@
   <meta name='keywords' content=''>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel='stylesheet' type='text/css' href="styles/styles.css" />
-  <script src="js/jquery-1.11.1.min.js"></script>
-  <script src="js/jquery-ui.min.js"></script>
+  <script src="js/lib/jquery-1.11.1.min.js"></script>
+  <script src="js/lib/jquery-ui.min.js"></script>
   <script src="js/generate.js"></script>
 </head>
 <body>
